--- a/ourspace-reader/nfc-reader-firmware/platformio.ini
+++ b/ourspace-reader/nfc-reader-firmware/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = uno
+
 [env:ESP8266]
 platform = espressif8266
 board = d1
@@ -16,3 +19,11 @@ monitor_speed = 115200
 upload_speed = 921600
 lib_deps = 
     FastLED
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+lib_deps =
+    arduino-libraries/Ethernet
+    adafruit/Adafruit NeoPixel
