--- a/buf.yaml
+++ b/buf.yaml
@@ -8,7 +8,10 @@ deps:
   - buf.build/gnostic/gnostic
 lint:
   use:
-    - DEFAULT
+    - STANDARD
   except:
     - RPC_RESPONSE_STANDARD_NAME
     - RPC_REQUEST_RESPONSE_UNIQUE
+    - PACKAGE_VERSION_SUFFIX
+    - PACKAGE_DIRECTORY_MATCH
+  enum_zero_value_suffix: _UNKNOWN
