Implement Api-Key to access token exchange for the firmware component to authenticate against the backend Don't redirect the frontend to /login if the page is non-authenticated Add Dockerfiles to build images for deployment Add option to disable authentication for a server in pkg/setup, for frontend-firmware communication Add .pem files to gitignore

--- a/ourspace-backend/Makefile
+++ b/ourspace-backend/Makefile
@@ -2,8 +2,8 @@ SHELL=/bin/bash -e -o pipefail
 PWD = $(shell pwd)
 
 # constants
-DOCKER_REPO = ourspace-backend
-DOCKER_TAG = latest
+DOCKER_REPO = ghcr.io/cfhn/our-space/backend
+DOCKER_TAG = v0.0.1-pre0
 
 all: git-hooks generate tidy ## Initializes all tools
 
@@ -66,7 +66,7 @@ clean: ## Cleans up everything
 	@rm -rf bin out protodeps
 
 docker: ## Builds docker image
-	docker buildx build --cache-to type=inline -t $(DOCKER_REPO):$(DOCKER_TAG) .
+	docker buildx build --cache-to type=inline -t $(DOCKER_REPO):$(DOCKER_TAG) -f Dockerfile ../
 # additional dependencies for grpc
 GO_DEPENDENCIES = google.golang.org/protobuf/cmd/protoc-gen-go \
 				google.golang.org/grpc/cmd/protoc-gen-go-grpc \
